# agenttrace

./: LICENSE  README.md
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: conftest.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/DetailsPanel/: DetailsPanel.css  DetailsPanel.tsx  JsonView.tsx  index.tsx
frontend/src/components/RunList/: RunList.css  RunList.tsx  RunListItem.tsx  index.tsx
frontend/src/components/TraceTree/: TraceNode.tsx  TraceTree.css  TraceTree.tsx  index.tsx
frontend/src/hooks/: useRuns.ts
frontend/src/types/: index.ts
sdk/: pyproject.toml
sdk/src/agent_trace_sdk/: __init__.py  context.py  decorators.py  exporter.py  processor.py  span.py  tracer.py
sdk/src/agent_trace_sdk/domain/: __init__.py  interfaces.py
sdk/tests/: conftest.py  test_e2e.py
