[project]
name = "agent-trace-sdk"
version = "0.1.0"
description = "SDK for AI Agent Step Debugger"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_trace_sdk"]
